--- a/test.html
+++ b/test.html
@@ -13,6 +13,9 @@
             text-align: center;color: cornflowerblue;font-family:cursive;
 
         }
+        body {
+            background-color:seagreen;
+        }
     </style>
 </head>
 <body>
